utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/IncludeExcluded.ide
package invalid

ide IncludeExcluded extends IncludeExcludedParent, IncludeExcludedOtherParent {
    registry "https://hub.docker.com/some/awesome/image:latest"
    build "some/amazing/path" resolved from ROOT

    include module type IncludeExcludedModule1

    include module type IncludeExcludedModule4
}
